CYAN-814 - fixed epa logo overlapping 'my locations' header button

--- a/cyan_angular/src/app/header/header.component.css
+++ b/cyan_angular/src/app/header/header.component.css
@@ -6,7 +6,7 @@
     left: 10px;
     width: 10%;
     max-width: 110px;
-    height: 100%;
+    height: 50%;
   }
   .header-title-abr {
     display: none;
@@ -42,8 +42,8 @@
 }
 @media screen and (max-width: 1023px) and (min-width: 500px) {
   .header-logo {
-    margin-top: 0;
-    height: 100%;
+    margin-top: 0.5%;
+    height: 50%;
     width: 100%;
     max-width: 110px;
   }
